src/test/ui/compile-fail-migration/regions-close-over-type-parameter-1.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/regions-close-over-type-parameter-1.rs:20:5
   |
LL |     box v as Box<SomeTrait+'static>
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: not reporting region error due to nll
  --> $DIR/regions-close-over-type-parameter-1.rs:20:5
   |
LL |     box v as Box<SomeTrait+'static>
   |     ^^^^^

warning: not reporting region error due to nll
  --> $DIR/regions-close-over-type-parameter-1.rs:30:5
   |
LL |     box v as Box<SomeTrait+'b>
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: not reporting region error due to nll
  --> $DIR/regions-close-over-type-parameter-1.rs:30:5
   |
LL |     box v as Box<SomeTrait+'b>
   |     ^^^^^

error[E0310]: the parameter type `A` may not live long enough
  --> $DIR/regions-close-over-type-parameter-1.rs:20:5
   |
LL |     box v as Box<SomeTrait+'static>
   |     ^^^^^
   |
   = help: consider adding an explicit lifetime bound `A: 'static`...

error[E0309]: the parameter type `A` may not live long enough
  --> $DIR/regions-close-over-type-parameter-1.rs:30:5
   |
LL |     box v as Box<SomeTrait+'b>
   |     ^^^^^
   |
   = help: consider adding an explicit lifetime bound `A: 'b`...

error: aborting due to 2 previous errors

Some errors occurred: E0309, E0310.
For more information about an error, try `rustc --explain E0309`.
